Remove email author. Closes #10.
